update with, Oath edit and Mongodb

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 <body>
   <a href='/workouts'>All Workouts</a>
   <a href='/workouts/new'>Add Workouts</a>
-  <h1><%= Welcome to PT-Connect %></h1>
+  <h1> Welcome to PT-Connect </h1>
 
 </body>
 
